welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:4: error: forward reference extends over definition of variable a
	    var a:Int = b;
                        ^